--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         // document.getElementById('camera').src = data.camera_url;
       });
     </script> -->
-
+    <div id="baro_pressure">Loading...</div>
+    <div id="humidity">Loading...</div>
+    <div id="temperature">Loading...</div>
     <script>
       // import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js'
       // // If you enabled Analytics in your project, add the Firebase SDK for Google Analytics
@@ -156,7 +158,9 @@
         document.getElementById('camera').src = data.camera_url;
       });
     </script> -->
-
+    <div id="baro_pressure">Loading...</div>
+    <div id="humidity">Loading...</div>
+    <div id="temperature">Loading...</div>
 
     <p>Temperature: <span id='temperature'></span></p>
     <p>Humidity: <span id='humidity'></span></p>
