--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="container">
         <header class="major">
           <div class="center">
-            <p>Greenhouse Values</p>
+            <p>Greenhouse Values (*testing API for a greenhouse data set)</p>
             <p>Temperature: <span id="temperature">Loading...</span></p>
             <p>Humidity: <span id="humidity">Loading...</span></p>
             <p>Barometric Pressure: <span id="baro_pressure">Loading...</span></p>
@@ -80,12 +80,16 @@
             areas. I
             greatly enjoy learning/tinkering with electronic and software systems
             like instruments, robotics, radio/wireless communications, 3D models, games, computer simulations.<br><br>
+
+
             I also love thinking aboout technology in nature and sustainbility concepts like Earth ships (self
             sustaining homes), renewable designs, and low/free power projects.<br><br>
+
+
             Additionally, my previous work experience was as a 3rd Class Power Engineer and a
             Chemical Engineering Technologist involving industrial
-            plant operations, small research pilot chemical plants, and research lab
-            environments.
+            plant operations, small research pilot chemical plants, research lab
+            environments, and 3D modeling (SolidWorks) and 3D printing.
           </p>
         </header>
       </div>
@@ -96,6 +100,43 @@
         <source src="images\video_collage_1.mp4" type="video/mp4" />
       </video>
     </div>
+
+    <!-- Another Text Group -->
+    <section class="wrapper style2">
+      <div class="container">
+        <!-- <header class="major"> -->
+          <p>
+            I also have experience with additional tools / concepts, like:<br>
+            - 3D printers (Prusa MK3S; Big Builder).<br>
+            - 3D modeling (previously SolidWorks, now Fusion360).<br>
+            - Windows computers (I am most familiar with their operating systems as I’ve been using them most of my
+            life).<br>
+            - Computer hardware internals (I built my own gaming desktop PC from individual parts and installed all drivers and
+            the OS).<br>
+            - Oscilloscopes and wave generators (at basic level, not 'advanced' Keysight ones).<br>
+            - Multimeters.<br>
+            - Soldering stations.<br>
+            - DC bench adjustable power supplies.<br>
+            - Appliance / instrument tinkering (not an expert at all, just saying I'm not afraid to delve into
+            appliances if they are experiencing issues).<br>
+            - Power tools (not regular user, just saying I'm not afraid to use them and am conscious about how to use
+            them, or, if unfamiliar, then learn about how to use them).<br>
+            - Safety data systems (MSDS / SDS / chemical safety concepts).<br>
+            - Safety equipment (PPE usage is important, and typical usage is hard set into my mind from doing my
+            previous industrial work; this includes eyewear, ear protection, hard toe footwear, job specific gloves,
+            hardhats, respiratory protection, clothing guards, etc.).<br>
+            - Residential live wire systems (*not certified as Electrician, just saying I understand the basics of 120V
+            residential power systems and am not afraid to delve in projects involving them).<br>
+            - Compression-ferrule fittings (Swagelok), NPS, NPT piping systems (for air, inert gas, and flammable gas).<br>
+            - Residential natural gas systems (*not certified as Natural Gas Pipe Installer, just saying I understand
+            the basics of gas piping systems and am not afraid to delve in projects involving them; though I will say my
+            old career had me working with 2000psi hydrogen piping systems, so I do know a thing or two about
+            high-pressure flammable systems).<br>
+          </p>
+        <!-- </header> -->
+      </div>
+    </section>
+
 
     <!-- Main pages (since mobile puts them in hamburger menu, this set of links is more open) -->
     <section class="wrapper style1">
