--- a/Testing-Deep-Sleep-On-ESP01-With-Worm-Farm.html
+++ b/Testing-Deep-Sleep-On-ESP01-With-Worm-Farm.html
@@ -156,11 +156,19 @@
 						below the milliAmp range, so for now I’m just testing by checking periodical for battery drain.
 						I read that removing the board's LEDs can help with lowering amperage.<br><br>
 
-						<b>Update: Battery didn't last overnight (less than 18hrs use), not good!</b> When I checked the setup this morning i
+						<b>Update: Battery didn't last overnight (less than 18hrs use), not good!</b> When I checked the
+						setup this morning i
 						expected it to still run at least for the day, but it was at 2.5V (which is apparently below
 						this device's operating voltage range). I will lower the program looping frequency (i.e.
 						increasing deep sleep time from 1-minute to 30-minutes), remove that
-						'always on' LED, and replace the battery with some AAs (3.00V at 10:30am aug 9) .<br>
+						'always on' LED, and replace the battery with some AAs.<br><br>
+
+						<b>Update 2: Battery lasted at least a week, but rain got into the container (which is strange
+							because the tupperware was sealed) so battery might have been killed. </b> The battery setup
+						went from 3V to 1.35V in about 10 days, but it rained in the last few days (which got into the
+						container and possibly shorted the battery). I'm going to hold off on
+						further testing this until I find a working data logger server since Cayenne's is not recording my
+						history.<br>
 
 						<h3>References</h3>
 						<p>
