--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
         <!-- <header class="major"> -->
           <p>
             I also have experience with additional tools / concepts, like:<br>
+            - Full Class 5 Alberta Driver's License (No conditions; non-GDL); no law infractions; own my own vehicle.<br>
+            - Safety data systems (MSDS / SDS / chemical safety concepts).<br>
+            - Safety equipment (PPE usage is important, and typical usage is hard set into my mind from doing my
+            previous industrial work; this includes eyewear, ear protection, hard toe footwear, job specific gloves,
+            hardhats, respiratory protection, clothing guards, etc.).<br>
             - 3D printers (Prusa MK3S; Big Builder).<br>
             - 3D modeling (previously SolidWorks, now Fusion360).<br>
             - Windows computers (I am most familiar with their operating systems as I’ve been using them most of my
@@ -121,10 +126,6 @@
             appliances if they are experiencing issues).<br>
             - Power tools (not regular user, just saying I'm not afraid to use them and am conscious about how to use
             them, or, if unfamiliar, then learn about how to use them).<br>
-            - Safety data systems (MSDS / SDS / chemical safety concepts).<br>
-            - Safety equipment (PPE usage is important, and typical usage is hard set into my mind from doing my
-            previous industrial work; this includes eyewear, ear protection, hard toe footwear, job specific gloves,
-            hardhats, respiratory protection, clothing guards, etc.).<br>
             - Residential live wire systems (*not certified as Electrician, just saying I understand the basics of 120V
             residential power systems and am not afraid to delve in projects involving them).<br>
             - Compression-ferrule fittings (Swagelok), NPS, NPT piping systems (for air, inert gas, and flammable gas).<br>
