--- a/featured.html
+++ b/featured.html
@@ -49,7 +49,7 @@
 					<li class="current"><a href="featured.html">Featured</a></li>
 					<!-- <li><a href="no-sidebar2.html">Electronics</a></li> -->
 					<li><a href="archived.html">Archived</a></li>
-					<!-- <li><a href="no-sidebar4.html">Extra XP</a></li> -->
+					<li><a href="gamedev.html">Game Development</a></li>
 					<!-- <li><a href="articleexample.html">ArticleExample</a></li> -->
 				</ul>
 			</nav>
