--- a/gamedev.html
+++ b/gamedev.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Archived - Brandon Hoynick's CV Profile</title>
+	<title>Game Development - Brandon Hoynick's CV Profile</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -47,8 +47,8 @@
 							</li> -->
 					<li><a href="featured.html">Featured</a></li>
 					<!-- <li><a href="no-sidebar2.html">Electronics</a></li> -->
-					<li class="current"><a href="archived.html">Archived</a></li>
-					<li><a href="gamedev.html">Game Development</a></li>
+					<li><a href="archived.html">Archived</a></li>
+					<li class="current"><a href="gamedev.html">Game Development</a></li>
 					<!-- <li><a href="articleexample.html">ArticleExample</a></li> -->
 				</ul>
 			</nav>
@@ -62,202 +62,17 @@
 
 					<!-- Content -->
 					<header>
-						<h2>Archived</h2>
-						<p>Let's see ALL of what I've experienced. [Click on the titles to see each article.]<br>
+						<h2>Game Development</h2>
+						<p>Let's see my experiences in game development.<br>
 							(NOTE: These articles are personal records of what projects I have attempted. These are not
 							articles to take directions from; instead, I have left references to those articles at the
 							end.)<br>
 							If you are looking for a particular tag of project, then use Ctrl+F to search for your
-							desired keyword.</p>
+							desired keyword.<br>
+							For simplicity with audio, I have setup videos and audio players to start muted.
+						
+						</p>
 					</header>
-
-					<!-- Article//// -->
-					<!-- CTA -->
-					<section id="cta" class="wrapper style3">
-						<div class="container">
-						</div>
-					</section>
-					<article>
-						<header>
-							<h2><a href="Portable-UV-Index-Meter.html">Testing a Portable UV Index Meter</a></h2>
-							<p>TAGS: electronics; software; Arduino nano; GUVA-S12SD UV sensor </p>
-						</header>
-
-						<h3>Why I Did This</h3>
-						<p>I bought the cheap GUVA-S12SD UV sensor because I figured it could be a useful sensor for a
-							myriad
-							of solar projects (weather station; garden solar quality measurement; solar panel monitors;
-							UV research projects)
-							so I wanted to test out its measuring qualities with a simple portable meter.
-						</p>
-
-						<span class="image featured"><img src="articleAssets\Portable-UV-Index-Meter\Portable-UV_1.jpg"
-								alt="" /></span>
-					</article>
-
-					<!-- Article//// -->
-					<!-- CTA -->
-					<section id="cta" class="wrapper style3">
-						<div class="container">
-						</div>
-					</section>
-					<article>
-						<header>
-							<h2><a href="Arduino-Indoor-Garden-Box-with-Data-Logger.html">Arduino Indoor Garden Box with
-									Data Logger</a></h2>
-							<p>TAGS: electronics; software; nature projects; Arduino Uno; data logger shield; real time
-								clock; relay; water pump; DC motor fan; </p>
-						</header>
-						<h3>Why I Did This</h3>
-						<p>
-							One of my passions is with nature related automation (because I like growing food plants and
-							I love the idea of them being cared for through automation).
-							Normally I can achieve this with minimal equipment (like a bubbler alone), but I have an
-							Arduino, lots of sensors, and data logger shield; and, as an engineer,
-							I figured this would be a perfect project for testing all of this equipment.
-						</p>
-
-						<span class="image featured"><img
-								src="articleAssets\Arduino-Indoor-Garden-Box-with-Data-Logger\Indoor-Garden-Box_40.jpg"
-								alt="" /></span>
-					</article>
-
-					<!-- Article//// -->
-					<!-- CTA -->
-					<section id="cta" class="wrapper style3">
-						<div class="container">
-						</div>
-					</section>
-					<article>
-						<header>
-							<h2><a href="IOT-Esp8266-Sensor-Monitor-Cayenne.html">Using An Esp8266 And Cayenne As An IOT
-									Sensor Monitor</a></h2>
-							<p>TAGS: electronics; software; Esp8266; Arduino; WIFI Web Server; Cayenne </p>
-						</header>
-
-						<h3>Why I Did This</h3>
-						<p>
-							I wanted to test a free IOT server service that allows me to monitor my microcontroller
-							sensors from the web (from my smartphone). Cayenne (powered by myDevices) allows a user to
-							add arduinos, esp devices, and raspberry pis to its server so you can monitor whatever
-							sensors you attached to them from their website.
-						</p>
-
-						<span class="image featured"><img
-								src="articleAssets\IOT-Esp8266-Sensor-Monitor-Cayenne\cayenne-iot_0.jpg"
-								alt="" /></span>
-					</article>
-
-					<!-- Article//// -->
-					<!-- CTA -->
-					<section id="cta" class="wrapper style3">
-						<div class="container">
-						</div>
-					</section>
-					<article>
-						<header>
-							<h2><a href="NRF-Arduino-Testing.html">Testing NRF24L01 Radio Module Communications</a></h2>
-
-							<p>TAGS: electronics; software; Arduino nano; NRF24L01 radio module </p>
-						</header>
-
-						<h3>Why I Did This</h3>
-						<p>
-							I love the ‘magic’ of remote communications (i.e. being able to control items from long
-							wireless distances).
-							I wanted to test out some widely popular radio communication modules known as the NRF24L01
-							(I specifically have the longer-range PA/LNA ones, but the wiring and coding techniques are
-							the same as the original).
-							NRF24L01 modules operate under the widely popular 2.4GHz unlicensed radio band.
-						</p>
-
-						<span class="image featured"><img
-								src="articleAssets\NRF-Arduino-Testing\NRF-Arduino-Testing_1.jpg" alt="" /></span>
-					</article>
-
-					<!-- Article//// -->
-					<!-- CTA -->
-					<section id="cta" class="wrapper style3">
-						<div class="container">
-						</div>
-					</section>
-					<article>
-						<header>
-							<h2><a href="Firebase-Database-Esp8266-Sender-Receiver.html">Testing A Firebase Realtime
-									Database with Two ESP8266 Microcontrollers</a></h2>
-							<p>TAGS: electronics; software; Firebase database; ESP8266; Arduino; </p>
-						</header>
-
-						<h3>Why I Did This</h3>
-						<p>
-							I wanted to see how well internet connected microcontrollers could work with the simple
-							and
-							powerful Google Firebase.<br>
-
-							I’ve used Firebase before but never with microcontrollers and it could be a great
-							candidate
-							for simplifying data servers with Arduino devices.
-
-						</p>
-
-						<span class="image featured"><img
-								src="articleAssets\Firebase-Database-Esp8266-Sender-Receiver\Firebase-Database-Esp8266_1.jpg"
-								alt="" /></span>
-					</article>
-
-					<!-- Article//// -->
-					<!-- CTA -->
-					<section id="cta" class="wrapper style3">
-						<div class="container">
-						</div>
-					</section>
-					<article>
-						<header>
-							<h2><a href="Testing-Cheap-Solar-And-Battery-Storage-System.html">Experimenting With My
-									Cheap 12V 50W Solar Storage System</a></h2>
-							<p>TAGS: electronics; nature projects; solar; 12V batteries; MPPT </p>
-						</header>
-						<h3>Why I Did This</h3>
-						<p>I wanted to experience owning a solar storage system. I had the opportunity to receive
-							some
-							free 12V batteries, and I found a cheap basic maximum power point tracking (MPPT) solar
-							charge controller and 50W solar panel online.
-							The system totalled about $100. I also have a cheap 12V inverter (used in vehicles to
-							get a
-							120V AC supply).
-						</p>
-						<span class="image featured"><img
-								src="articleAssets\Testing-Cheap-Solar-And-Battery-Storage-System\Cheap-Solar-And-Battery-Storage_2.jpg"
-								alt="" /></span>
-					</article>
-
-					<!-- Article//// -->
-					<!-- CTA -->
-					<section id="cta" class="wrapper style3">
-						<div class="container">
-						</div>
-					</section>
-					<article>
-						<header>
-							<h2><a href="Winning-APIC-2023-Energy-Hackathon.html">Competing In and Winning the
-									APIC's 2023 Energy Hackathon</a></h2>
-							<p>TAGS: software; hackathon; Alberta Power Industry Consortium </p>
-						</header>
-						<h3>Why I Did This</h3>
-						<p>Hackathons are great place to: brainstorm project ideas; meet other innovators; get some
-							recognition and prize money. This hackathon was hosted at my university by the Alberta
-							Power
-							Industry Consortium, with the theme being centered around: Safety and Security for the
-							Smart
-							Grid, System Modelling and Artificial Intelligence for Power Systems, Grid Integration
-							of
-							Renewable and Distributed Energy, and Advanced Power Electronics for the Smart Grid. I
-							love
-							electrical-based projects so I figured this hackathon would be great for me.
-						</p>
-						<span class="image featured"><img
-								src="articleAssets\Winning-APIC-2023-Energy-Hackathon\APIC-2023_1.jpg" alt="" /></span>
-					</article>
 
 					<!-- Article//// -->
 					<!-- CTA -->
@@ -285,9 +100,38 @@
 							and not focused on microprocessors, but I’m speculating on that.
 						</p>
 
+
+						<h3>Title</h3>
 						<span class="image featured"><img
 								src="articleAssets\IOT-Esp8266-Sensor-Monitor-AdafruitIO\adafruitio-iot_3.jpg"
-								alt="" /></span>
+								alt="" />
+						</span>
+						
+						<h3>title</h3>
+						<iframe id="ytplayer" type="text/html" width="640" height="360"
+						src="https://www.youtube.com/embed/Hf875eOVrVI?&mute=1"
+						frameborder="0">
+						</iframe>
+
+						<h3>title</h3>
+						<audio muted class="player" controls preload="none" controlsList="nodownload" style="width: 100%;">
+							<source src="https://docs.google.com/uc?export=open&id=13s1pwgpWZAbpwYgaFa_MgdxiKGOILCtX" 
+							type="audio/mp3">
+						</audio>
+
+						<h3>Lessons Learned</h3>
+						<b>It works well but has limits.</b> I’m able to see all of the data on the
+						AdafruitIO website (including historical charts) and I can have multiple dashboards setup so
+						that the same feed data can go to different views, but I’m only allowed 10 sensor data pieces
+						for my free account, so this isn’t a viable solution if I need a free option and many sensors.
+						</p>
+
+						<h3>References</h3>
+						<p>AdafruitIO website: https://io.adafruit.com/ <br>
+							AdafruitIO tutorial:
+							https://www.circuitbasics.com/how-to-make-a-web-based-iot-control-dashboard/
+						</p>
+
 					</article>
 
 					<!-- Article//// -->
