--- a/gamedev.html
+++ b/gamedev.html
@@ -115,7 +115,7 @@
 
 						<h3>Why I Did This</h3>
 						<p>One of Unity’s lessons involved a 2-player tank battling game in 3D environment overtop a 2D
-							mechanic space (creating this 2.5D like environment). I was intrigue by that environment,
+							mechanic space (creating this 2.5D like environment). I was intrigued by that environment,
 							but not the 2-player mechanics of it. Instead, I wanted to practice my Unity skills by
 							turning the 2-player battle game into a 1-player vs computer battle game.<br><br>
 
@@ -124,7 +124,8 @@
 							destruction, life bars, SFX and music (my own track), simple UI layout (just words on a
 							canvas with keyboard controls), win/lose triggers.<br><br>
 
-							This is a demo video of me going through the level:
+							This is a demo video of me going through the level (I let the SFX go for a bit to demo the
+							tanks and explosions, but then I mute it and let my music play):
 						</p>
 
 						<div style="position: relative; overflow: hidden; padding-bottom: 56.25%;">
@@ -134,10 +135,12 @@
 							</iframe>
 						</div>
 
-						<p>Here is a link to the Unity Play webpage where you can play the level yourself:<br>
-							<a
-								href="https://play.unity.com/mg/other/tanks-shooter-but-against-computer-tanks">https://play.unity.com/mg/other/tanks-shooter-but-against-computer-tanks</a>
-						</p>
+						<p>
+							<br>Here is a link to the Unity Play webpage where you can play the level yourself:<br>
+							<a href="https://play.unity.com/mg/other/tanks-shooter-but-against-computer-tanks" target="_blank">
+							  https://play.unity.com/mg/other/tanks-shooter-but-against-computer-tanks
+							</a>
+						  </p>
 
 						<h3>Lessons Learned</h3>
 						The demo allowed me to try win/lose triggers for the scene overtop simple UIs, and allowed me to
@@ -268,7 +271,7 @@
 							style="width: 100%;">
 							<source src="https://docs.google.com/uc?export=open&id=1df0AfaFy6ev_LW7hXRgtgRGtmY9lcI35"
 								type="audio/wav">
-						</audio> 
+						</audio>
 
 						<h3>Lessons Learned</h3>
 						As demoed, stems (along with MIDIs) can further extend the remixing abilities of a song.
@@ -495,8 +498,7 @@
 						</p>
 
 
-						<span class="image featured"><img
-								src="articleAssets\gamedev\2dtilemapping.jpg" alt="" />
+						<span class="image featured"><img src="articleAssets\gamedev\2dtilemapping.jpg" alt="" />
 						</span>
 
 
@@ -542,7 +544,8 @@
 							-Spatial distance audio intensity (the further away a sound is, the quieter it is).<br>
 							-Doppler effect (as a sound move towards you it is higher pitched, and vice versa).<br>
 							-Reverb zones (audio sources gain effects when they are in marked zones).<br>
-							I demoed these effects on a Monster growling scene asset (whcih shows the SFX tools) and Viking village scene asset where the player ‘listener’ (a rock)
+							I demoed these effects on a Monster growling scene asset (whcih shows the SFX tools) and
+							Viking village scene asset where the player ‘listener’ (a rock)
 							was moving near fire sources embedded with spatial flames sounds and siren doppler sounds,
 							and a building producing 'hall' audio effects (reverb zones).
 
